OO-6647: batch synchronize of LDAP groups to organisations